# perso-2026a-bernardo-rizzardi

./: CHANGELOG.md  Dockerfile  README.md  render.yaml  rpg-engine.cabal  rpg.db
.stack-work/: stack.sqlite3
.stack-work/ghci/355fa640/: cabal_macros.h
.stack-work/ghci/4623492e/: cabal_macros.h
.stack-work/ghci/7ca488fc/: cabal_macros.h
src/: Combat.hs  Database.hs  Main.hs  Types.hs
static/: index.html
test/: Spec.hs
